src/test/deca/context/invalid/aff_notSameType_01_so.deca
// Description:
//    Tester l'affectation de variable avec un type différent
//
// Resultats:
//    Not exepected type
//
// Historique:
//    cree le 01/01/2023

{
        boolean bb="ddd";
        //int a="good";
        //int b = 5.7777;

        float f = 65;
        boolean bb= f;
}